--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<!-- 
-  Nav bar not working in app component
-
-<!-- Navbar 
-
+<!-- Navbar -->
 <div class="w3-top" >
   <div class="w3-bar w3-blue w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
@@ -41,7 +37,7 @@
   </div>
 </div>
 
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links)
+<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
   <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
@@ -49,17 +45,175 @@
   <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
 </div>
 
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) 
+<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
   <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
   <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
 </div>
--->
 
-<!-- Ajas' Google Maps Code Below 
--->
+<!-- Page content -->
+<div class="w3-content" style="max-width:100%;margin-top:46px">
+
+  <!-- Automatic Slideshow Images -->
+  
+   <div class="mySlides w3-display-container w3-center responsive"><br>
+  
+<img src="https://i.pinimg.com/originals/6e/b3/a2/6eb3a2f3205314949640cb08b47c81ea.jpg" alt="Trulli" width="1000" height="500">
+
+    </div>
+  </div>
+  <div class="mySlides w3-display-container w3-center"><br>
+  
+<img src="https://www.eopugetsound.org/sites/default/files/topical_article/images/9090323308_7182d8b76a_b.jpg" alt="Trulli" width="1000" height="500">
+
+ </div>
+  </div>
+  <div class="mySlides w3-display-container w3-center"><br>
+    <img src="https://blog.ticketmaster.com/wp-content/uploads/CenturyLink-Field-1024x540.jpg" alt="Trulli" width="1000" height="500">
+    </div>
+  </div>
+
+  <div class="mySlides w3-display-container w3-center"><br>
+    <img src="https://i.pinimg.com/originals/25/7e/05/257e05fe52be38510d6536818044103a.jpg" alt="Trulli" width="1000" height="500">
+</div>
+
+   <div class="mySlides w3-display-container w3-center"><br>
+    <img src="https://dynl.mktgcdn.com/p/awxKEe7u6q1jSU8pY1o5Zss9KauE2lYti_BIZ_e9Mv8/960x639.jpg" alt="Trulli" width="1000" height="500">
+</div>
+
+<div class="mySlides w3-display-container w3-center"><br>
+    <img src="https://www.cruisemapper.com/images/ports/6-large-1219d118d8a4a3a2281af44f8bfe5324.jpg" alt="Trulli" width="1000" height="500">
+</div>
+
+
+
+   <div class="mySlides w3-display-container w3-center"><br>
+    <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_limit,q_75,w_1200/https://assets.simpleviewinc.com/simpleview/image/upload/crm/seattlesouthside/Columbia_Center_Sky_View_Observatory-3_014e3c3a-cd38-d57b-cf4dd683ee753ecd.jpg" alt="Trulli" width="1000" height="500">
+</div>
+
+<div class="mySlides w3-display-container w3-center"><br>
+    <img src="https://i.pinimg.com/originals/ef/cd/6a/efcd6a982e181f6f007a2a5a80e5b459.jpg" alt="Trulli" width="1000" height="500">
+</div>
+    
+  
+
+ <!-- The Intro -->
+ 
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <h2 class="w3-wide">This is Seattle</h2>
+    <p class="w3-opacity"><i>Home of The Space Needle</i></p>
+    <p class="w3-justify">We are home to one of the most famous Landmarks in the World. The Space Needle opened in spring of 1962 at the worlds fair. It took around 400 days to build The Space Needle.The needle at the top and thin waist like shape was inspired by an abstract sculpture by artist Don Lemon titled, “the Feminine One.” To respect Don Lemon's contribution, this sculpture is displayed outside of The Space Needle itself. 1.3 million guests visit The Space Needle per year, and nearly 60 million visitors have visited the tower since 1962. The cost to build the Space Needle in 1962 was $4.5 million. In 2018, the Century Project renovation cost of $100 million, making the total worth of The Space Needle coming to 104.5 million dollar landmark. The Space Needle is privately owned by the Wright family and sits on a 120-foot by 120-foot private parcel of land on the Seattle Center campus. The Space Needle is 605 feet tall, it offers 360-degree views from its three main viewing areas – an indoor observation deck and open-air viewing area located at 520 feet, and an observation level featuring a revolving glass floor located 500 feet above ground. It previously had a resturant that was turned into the observation level with the rotating glass floors. The Space Needle installed The Loupe, the world’s first revolving glass floor, in 2018. The Loupe offers never-seen-before views of the Space Needle’s unique architecture, elevators, and the city below. The Space Needle was designated as an official landmark in 1999. It takes 43 seconds to travel in a Space Needle elevator from the ground to the tower’s top level, 520 feet above Seattle.</p>
+    <div class="w3-row w3-padding-32">
+      <div class="w3-third">
+        <p>Name</p>
+        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>Name</p>
+        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>Name</p>
+        <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
+      </div>
+    </div>
+  </div>
+
+  <!-- The Tour Section -->
+  <div class="w3-black" id="tour">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+      <h2 class="w3-wide w3-center">TOUR DATES</h2>
+      <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
+
+      <ul class="w3-ul w3-border w3-white w3-text-grey">
+        <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
+        <li class="w3-padding">October <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
+        <li class="w3-padding">November <span class="w3-badge w3-right w3-margin-right">3</span></li>
+      </ul>
+
+      <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+        <div class="w3-third w3-margin-bottom">
+          <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>New York</b></p>
+            <p class="w3-opacity">Fri 27 Nov 2016</p>
+            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Paris</b></p>
+            <p class="w3-opacity">Sat 28 Nov 2016</p>
+            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>San Francisco</b></p>
+            <p class="w3-opacity">Sun 29 Nov 2016</p>
+            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Ticket Modal -->
+  <div id="ticketModal" class="w3-modal">
+    <div class="w3-modal-content w3-animate-top w3-card-4">
+      <header class="w3-container w3-teal w3-center w3-padding-32"> 
+        <span onclick="document.getElementById('ticketModal').style.display='none'" 
+       class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
+        <h2 class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Tickets</h2>
+      </header>
+      <div class="w3-container">
+        <p><label><i class="fa fa-shopping-cart"></i> Tickets, $15 per person</label></p>
+        <input class="w3-input w3-border" type="text" placeholder="How many?">
+        <p><label><i class="fa fa-user"></i> Send To</label></p>
+        <input class="w3-input w3-border" type="text" placeholder="Enter email">
+        <button class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">PAY <i class="fa fa-check"></i></button>
+        <button class="w3-button w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
+        <p class="w3-right">Need <a href="#" class="w3-text-blue">help?</a></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- The Contact Section -->
+  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
+    <h2 class="w3-wide w3-center">CONTACT</h2>
+    <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
+    <div class="w3-row w3-padding-32">
+      <div class="w3-col m6 w3-large w3-margin-bottom">
+        <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
+        <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
+        <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
+      </div>
+      <div class="w3-col m6">
+        <form action="/action_page.php" target="_blank">
+          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
+            <div class="w3-half">
+              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+            </div>
+            <div class="w3-half">
+              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
+            </div>
+          </div>
+          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+          <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  
+<!-- End Page Content -->
+</div>
 <h1>Seattle Map</h1>
 
 <agm-map 
