--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,15 @@
-/* Add application styles & imports to this file! */.responsive {
+/* Add application styles & imports to this file! */
+
+.responsive {
   width: 100%;
   height: auto;
 }
+
+.fitsum {
+  margin-top: 50px;
+  background-color: red
+}
+
+.mySlides {display: none}
+
+body {font-family: "Lato", sans-serif}
